--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white">
+    android:background="@color/white"
+    tools:context=".presentation.login.LoginFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -144,6 +145,7 @@
         <com.google.android.material.divider.MaterialDivider
             android:layout_width="wrap_content"
             android:layout_height="2dp"
+            android:visibility="gone"
             android:layout_marginEnd="5dp"
             app:dividerColor="@color/secondary_color"
             app:layout_constraintBottom_toBottomOf="@id/txt_another"
@@ -155,6 +157,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
+            android:visibility="gone"
             android:text="Or log in with"
             android:textSize="12sp"
             app:layout_constraintEnd_toEndOf="@+id/btn_login"
@@ -165,6 +168,7 @@
             android:layout_width="wrap_content"
             android:layout_height="2dp"
             android:layout_marginStart="5dp"
+            android:visibility="gone"
             app:dividerColor="@color/secondary_color"
             app:layout_constraintBottom_toBottomOf="@id/txt_another"
             app:layout_constraintStart_toEndOf="@id/txt_another"
@@ -174,6 +178,7 @@
             android:id="@+id/row_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:visibility="gone"
             android:layout_marginTop="28dp"
             android:gravity="center"
             app:layout_constraintEnd_toEndOf="parent"
