--- a/app/src/main/res/layout/fragment_baggage.xml
+++ b/app/src/main/res/layout/fragment_baggage.xml
@@ -153,6 +153,7 @@
                 android:id="@+id/rv_passengers_baggage"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
                 tools:listitem="@layout/item_baggages"/>
 
         </LinearLayout>
