--- a/app/src/main/res/layout/fragment_verification.xml
+++ b/app/src/main/res/layout/fragment_verification.xml
@@ -105,6 +105,7 @@
             android:layout_height="50dp"
             android:layout_marginEnd="10dp"
             android:layout_weight="1"
+            android:nextFocusDown="@id/et_otp_2"
             android:gravity="center"
             android:inputType="number"
             android:maxLength="1"
@@ -118,6 +119,7 @@
             android:layout_height="50dp"
             android:layout_marginEnd="10dp"
             android:layout_weight="1"
+            android:nextFocusDown="@id/et_otp_3"
             android:gravity="center"
             android:inputType="number"
             android:maxLength="1"
@@ -129,6 +131,7 @@
             android:id="@+id/et_otp_3"
             android:layout_width="50dp"
             android:layout_height="50dp"
+            android:nextFocusDown="@id/et_otp_4"
             android:layout_marginEnd="10dp"
             android:layout_weight="1"
             android:gravity="center"
@@ -142,6 +145,7 @@
             android:id="@+id/et_otp_4"
             android:layout_width="50dp"
             android:layout_height="50dp"
+            android:nextFocusDown="@id/et_otp_5"
             android:layout_marginEnd="10dp"
             android:layout_weight="1"
             android:gravity="center"
@@ -155,6 +159,7 @@
             android:id="@+id/et_otp_5"
             android:layout_width="50dp"
             android:layout_height="50dp"
+            android:nextFocusDown="@id/et_otp_6"
             android:layout_marginEnd="10dp"
             android:layout_weight="1"
             android:gravity="center"
@@ -171,6 +176,7 @@
             android:layout_weight="1"
             android:gravity="center"
             android:inputType="number"
+            android:imeOptions="actionDone"
             android:maxLength="1"
             android:maxLines="1"
             android:textColor="@color/black"
@@ -192,7 +198,7 @@
         app:layout_constraintTop_toBottomOf="@id/ll_otp" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_login"
+        android:id="@+id/btn_verify"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:layout_marginTop="118dp"
