--- a/app/src/main/res/layout/fragment_choose_ticket.xml
+++ b/app/src/main/res/layout/fragment_choose_ticket.xml
@@ -38,16 +38,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <TextView
-        android:id="@+id/tv_no_tickets"
-        android:layout_width="wrap_content"
+    <include
+        android:id="@+id/include_no_tickets"
+        layout="@layout/item_not_available"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:fontFamily="@font/roboto_medium"
-        android:text="@string/tv_no_tickets"
         android:visibility="gone"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rv_pick_date" />
@@ -67,6 +64,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
+        android:visibility="visible"
         android:layout_marginTop="12dp"
         android:fontFamily="@font/roboto_bold"
         android:text="@string/tv_choose_ticket_departure_schedule_label"
@@ -79,12 +77,13 @@
         android:id="@+id/rv_ticket_list"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginTop="12dp"
+        android:visibility="visible"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         app:layout_constraintBottom_toTopOf="@+id/include_bottom_navigation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_departure_schedule_label"
-        tools:listitem="@layout/item_ticket"
-        />
+        tools:listitem="@layout/item_ticket" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
