--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -21,6 +21,9 @@
         <action
             android:id="@+id/action_splashFragment_to_onboardingFragment"
             app:destination="@id/onboardingFragment" />
+        <action
+            android:id="@+id/action_splashFragment_to_homePageFragment"
+            app:destination="@id/homePageFragment" />
     </fragment>
     <fragment
         android:id="@+id/homePageFragment"
@@ -28,12 +31,24 @@
         android:label="fragment_home_page"
         tools:layout="@layout/fragment_home_page">
         <action
+            android:id="@+id/action_homePageFragment_to_oneWayTripFragment"
+            app:destination="@id/nav_booking" />
+        <action
             android:id="@+id/action_homePageFragment_to_airportBottomSheetDialog"
             app:destination="@id/airportBottomSheetDialog" />
         <action
-            android:id="@+id/action_homePageFragment_to_oneWayTripFragment"
-            app:destination="@id/oneWayTripFragment" />
+            android:id="@+id/action_homePageFragment_to_notificationFragment"
+            app:destination="@id/notificationFragment" />
     </fragment>
+    <dialog
+        android:id="@+id/airportBottomSheetDialog"
+        android:name="com.rajawali.app.presentation.pickCity.AirportBottomSheetDialog"
+        android:label="bottom_sheet_dialog_airport"
+        tools:layout="@layout/bottom_sheet_dialog_airport">
+        <argument
+            android:name="airport"
+            app:argType="com.rajawali.core.domain.enums.AirportTypeEnum" />
+    </dialog>
     <fragment
         android:id="@+id/loginFragment"
         android:name="com.rajawali.app.presentation.ui.auth.login.LoginFragment"
@@ -47,8 +62,8 @@
             app:enterAnim="@anim/slide_in_right"
             app:exitAnim="@anim/slide_out_right"
             app:launchSingleTop="true" />
-
     </fragment>
+
     <fragment
         android:id="@+id/registerFragment"
         android:name="com.rajawali.app.presentation.ui.auth.register.RegisterFragment"
@@ -60,151 +75,10 @@
             android:id="@+id/action_registerFragment_to_verificationFragment"
             app:destination="@id/verificationFragment" />
     </fragment>
-    <dialog
-        android:id="@+id/airportBottomSheetDialog"
-        android:name="com.rajawali.app.presentation.pickCity.AirportBottomSheetDialog"
-        android:label="bottom_sheet_dialog_airport"
-        tools:layout="@layout/bottom_sheet_dialog_airport">
-        <argument
-            android:name="airport"
-            app:argType="com.rajawali.core.domain.enums.AirportTypeEnum" />
-    </dialog>
-    <fragment
-        android:id="@+id/oneWayTripFragment"
-        android:name="com.rajawali.app.presentation.booking.OneWayTripFragment"
-        android:label="fragment_one_way_trip"
-        tools:layout="@layout/fragment_one_way_trip">
-        <action
-            android:id="@+id/action_oneWayTripFragment_to_airportBottomSheetDialog"
-            app:destination="@id/airportBottomSheetDialog" />
-        <action
-            android:id="@+id/action_oneWayTripFragment_to_passengerBottomSheetDialog"
-            app:destination="@id/passengerBottomSheetDialog" />
-        <action
-            android:id="@+id/action_oneWayTripFragment_to_chooseTicketFragment"
-            app:destination="@id/chooseTicketFragment" />
-    </fragment>
-    <dialog
-        android:id="@+id/passengerBottomSheetDialog"
-        android:name="com.rajawali.app.presentation.bottomSheetDialog.passenger.PassengerBottomSheetDialog"
-        android:label="PassengerBottomSheetDialog" />
-    <fragment
-        android:id="@+id/chooseTicketFragment"
-        android:name="com.rajawali.app.presentation.chooseTicket.ChooseTicketFragment"
-        android:label="fragment_choose_ticket"
-        tools:layout="@layout/fragment_choose_ticket" >
-        <action
-            android:id="@+id/action_chooseTicketFragment_to_selectedTicketFragment"
-            app:destination="@id/selectedTicketFragment" />
-        <action
-            android:id="@+id/action_chooseTicketFragment_to_flightDetailBottomSheetDialog"
-            app:destination="@id/flightDetailBottomSheetDialog" />
-    </fragment>
-    <fragment
-        android:id="@+id/selectedTicketFragment"
-        android:name="com.rajawali.app.presentation.selectedTicket.SelectedTicketFragment"
-        android:label="SelectedTicketFragment" >
-        <action
-            android:id="@+id/action_selectedTicketFragment_to_detailsInformationFragment"
-            app:destination="@id/detailsInformationFragment" />
-    </fragment>
-    <dialog
-        android:id="@+id/flightDetailBottomSheetDialog"
-        android:name="com.rajawali.app.presentation.bottomSheetDialog.flightDetail.FlightDetailBottomSheetDialog"
-        android:label="FlightDetailBottomSheetDialog" >
-        <argument
-            android:name="ticket"
-            app:argType="com.rajawali.core.domain.model.FlightModel" />
-    </dialog>
-    <fragment
-        android:id="@+id/detailsInformationFragment"
-        android:name="com.rajawali.app.presentation.detailsInformation.DetailsInformationFragment"
-        android:label="fragment_details_information"
-        tools:layout="@layout/fragment_details_information" >
-        <action
-            android:id="@+id/action_detailsInformationFragment_to_passengerDetailsBottomSheetDialog"
-            app:destination="@id/passengerDetailsBottomSheetDialog" />
-        <action
-            android:id="@+id/action_detailsInformationFragment_to_travelAddOnsFragment"
-            app:destination="@id/travelAddOnsFragment" />
-    </fragment>
-    <dialog
-        android:id="@+id/passengerDetailsBottomSheetDialog"
-        android:name="com.rajawali.app.presentation.bottomSheetDialog.passengerDetails.PassengerDetailsBottomSheetDialog"
-        android:label="PassengerDetailsBottomSheetDialog" >
-        <argument
-            android:name="passenger"
-            app:argType="com.rajawali.core.domain.model.PassengerInputModel" />
-    </dialog>
-    <fragment
-        android:id="@+id/travelAddOnsFragment"
-        android:name="com.rajawali.app.presentation.addsOn.TravelAddOnsFragment"
-        android:label="fragment_travel_add_ons"
-        tools:layout="@layout/fragment_travel_add_ons" >
-        <action
-            android:id="@+id/action_travelAddOnsFragment_to_baggageFragment"
-            app:destination="@id/baggageFragment" />
-        <action
-            android:id="@+id/action_travelAddOnsFragment_to_mealsFragment"
-            app:destination="@id/mealsFragment" />
-        <action
-            android:id="@+id/action_travelAddOnsFragment_to_paymentFragment"
-            app:destination="@id/paymentFragment" />
-    </fragment>
-    <fragment
-        android:id="@+id/mealsFragment"
-        android:name="com.rajawali.app.presentation.addsOn.meals.MealsFragment"
-        android:label="MealsFragment" />
-    <fragment
-        android:id="@+id/baggageFragment"
-        android:name="com.rajawali.app.presentation.addsOn.baggage.BaggageFragment"
-        android:label="fragment_baggage"
-        tools:layout="@layout/fragment_baggage" />
-    <fragment
-        android:id="@+id/paymentFragment"
-        android:name="com.rajawali.app.presentation.payment.PaymentFragment"
-        android:label="PaymentFragment" >
-        <action
-            android:id="@+id/action_paymentFragment_to_paymentMethodBottomSheetDialog"
-            app:destination="@id/paymentMethodBottomSheetDialog" />
-        <action
-            android:id="@+id/action_paymentFragment_to_paymentWaitingFragment"
-            app:destination="@id/paymentWaitingFragment" />
-        <action
-            android:id="@+id/action_paymentFragment_to_flightDetailBottomSheetDialog"
-            app:destination="@id/flightDetailBottomSheetDialog" />
-    </fragment>
-    <dialog
-        android:id="@+id/paymentMethodBottomSheetDialog"
-        android:name="com.rajawali.app.presentation.bottomSheetDialog.paymentMethod.PaymentMethodBottomSheetDialog"
-        android:label="PaymentMethodBottomSheetDialog" />
-    <fragment
-        android:id="@+id/paymentCompleteFragment"
-        android:name="com.rajawali.app.presentation.paymentComplete.PaymentCompleteFragment"
-        android:label="PaymentCompleteFragment" >
-        <action
-            android:id="@+id/action_paymentCompleteFragment_to_homePageFragment"
-            app:destination="@id/homePageFragment" />
-    </fragment>
-    <fragment
-        android:id="@+id/paymentWaitingFragment"
-        android:name="com.rajawali.app.presentation.paymentWaiting.PaymentWaitingFragment"
-        android:label="fragment_payment_waiting"
-        tools:layout="@layout/fragment_payment_waiting" >
-        <action
-            android:id="@+id/action_paymentWaitingFragment_to_paymentCompleteFragment"
-            app:destination="@id/paymentCompleteFragment" />
-        <action
-            android:id="@+id/action_paymentWaitingFragment_to_homePageFragment"
-            app:destination="@id/homePageFragment" />
-        <action
-            android:id="@+id/action_paymentWaitingFragment_to_flightDetailBottomSheetDialog"
-            app:destination="@id/flightDetailBottomSheetDialog" />
-    </fragment>
     <fragment
         android:id="@+id/verificationFragment"
-        android:name="com.rajawali.app.presentation.ui.auth.veritication.VerificationFragment"
-        android:label="VerificationFragment" >
+        android:name="com.rajawali.app.presentation.ui.auth.verification.VerificationFragment"
+        android:label="VerificationFragment">
         <argument
             android:name="email"
             app:argType="string" />
@@ -212,4 +86,195 @@
             android:id="@+id/action_verificationFragment_to_loginFragment"
             app:destination="@id/loginFragment" />
     </fragment>
+    <navigation
+        android:id="@+id/nav_booking"
+        app:startDestination="@id/oneWayTripFragment">
+        <fragment
+            android:id="@+id/paymentWaitingFragment"
+            android:name="com.rajawali.app.presentation.paymentWaiting.PaymentWaitingFragment"
+            android:label="fragment_payment_waiting"
+            tools:layout="@layout/fragment_payment_waiting">
+            <action
+                android:id="@+id/action_paymentWaitingFragment_to_paymentCompleteFragment"
+                app:destination="@id/paymentCompleteFragment" />
+            <action
+                android:id="@+id/action_paymentWaitingFragment_to_homePageFragment"
+                app:destination="@id/homePageFragment" />
+            <action
+                android:id="@+id/action_paymentWaitingFragment_to_flightDetailBottomSheetDialog"
+                app:destination="@id/flightDetailBottomSheetDialog" />
+            <action
+                android:id="@+id/action_paymentWaitingFragment_to_notAvailableBottomSheetDialog"
+                app:destination="@id/notAvailableBottomSheetDialog" />
+        </fragment>
+        <fragment
+            android:id="@+id/travelAddOnsFragment"
+            android:name="com.rajawali.app.presentation.addsOn.TravelAddOnsFragment"
+            android:label="fragment_travel_add_ons"
+            tools:layout="@layout/fragment_travel_add_ons">
+            <action
+                android:id="@+id/action_travelAddOnsFragment_to_baggageFragment"
+                app:destination="@id/baggageFragment" />
+            <action
+                android:id="@+id/action_travelAddOnsFragment_to_mealsFragment"
+                app:destination="@id/mealsFragment" />
+            <action
+                android:id="@+id/action_travelAddOnsFragment_to_paymentFragment"
+                app:destination="@id/paymentFragment" />
+            <action
+                android:id="@+id/action_travelAddOnsFragment_to_notAvailableBottomSheetDialog"
+                app:destination="@id/notAvailableBottomSheetDialog" />
+        </fragment>
+        <dialog
+            android:id="@+id/passengerDetailsBottomSheetDialog"
+            android:name="com.rajawali.app.presentation.bottomSheetDialog.passengerDetails.PassengerDetailsBottomSheetDialog"
+            android:label="PassengerDetailsBottomSheetDialog">
+            <argument
+                android:name="passenger"
+                app:argType="com.rajawali.core.domain.model.PassengerInputModel" />
+        </dialog>
+        <fragment
+            android:id="@+id/selectedTicketFragment"
+            android:name="com.rajawali.app.presentation.selectedTicket.SelectedTicketFragment"
+            android:label="SelectedTicketFragment">
+            <action
+                android:id="@+id/action_selectedTicketFragment_to_detailsInformationFragment"
+                app:destination="@id/detailsInformationFragment" />
+        </fragment>
+        <dialog
+            android:id="@+id/notAvailableBottomSheetDialog"
+            android:name="com.rajawali.app.presentation.bottomSheetDialog.notAvailable.NotAvailableBottomSheetDialog"
+            android:label="NotAvailableBottomSheetDialog"
+            tools:layout="@layout/not_available_bottom_sheet_dialog">
+            <argument
+                android:name="type"
+                app:argType="com.rajawali.core.domain.enums.NotAvailableEnum" />
+            <action
+                android:id="@+id/action_notAvailableBottomSheetDialog_to_chooseTicketFragment"
+                app:destination="@id/chooseTicketFragment" />
+            <action
+                android:id="@+id/action_notAvailableBottomSheetDialog_to_loginFragment"
+                app:destination="@id/loginFragment" />
+            <action
+                android:id="@+id/action_notAvailableBottomSheetDialog_to_loginFragment2"
+                app:destination="@id/loginFragment" />
+        </dialog>
+        <fragment
+            android:id="@+id/oneWayTripFragment"
+            android:name="com.rajawali.app.presentation.booking.OneWayTripFragment"
+            android:label="fragment_one_way_trip"
+            tools:layout="@layout/fragment_one_way_trip">
+            <action
+                android:id="@+id/action_oneWayTripFragment_to_airportBottomSheetDialog"
+                app:destination="@id/airportBottomSheetDialog" />
+            <action
+                android:id="@+id/action_oneWayTripFragment_to_passengerBottomSheetDialog"
+                app:destination="@id/passengerBottomSheetDialog" />
+            <action
+                android:id="@+id/action_oneWayTripFragment_to_chooseTicketFragment"
+                app:destination="@id/chooseTicketFragment" />
+        </fragment>
+        <dialog
+            android:id="@+id/paymentMethodBottomSheetDialog"
+            android:name="com.rajawali.app.presentation.bottomSheetDialog.paymentMethod.PaymentMethodBottomSheetDialog"
+            android:label="PaymentMethodBottomSheetDialog" />
+        <dialog
+            android:id="@+id/flightDetailBottomSheetDialog"
+            android:name="com.rajawali.app.presentation.bottomSheetDialog.flightDetail.FlightDetailBottomSheetDialog"
+            android:label="FlightDetailBottomSheetDialog">
+            <argument
+                android:name="ticket"
+                app:argType="com.rajawali.core.domain.model.FlightModel" />
+        </dialog>
+        <dialog
+            android:id="@+id/airportBottomSheetDialog"
+            android:name="com.rajawali.app.presentation.pickCity.AirportBottomSheetDialog"
+            android:label="bottom_sheet_dialog_airport"
+            tools:layout="@layout/bottom_sheet_dialog_airport">
+            <argument
+                android:name="airport"
+                app:argType="com.rajawali.core.domain.enums.AirportTypeEnum" />
+        </dialog>
+        <fragment
+            android:id="@+id/paymentFragment"
+            android:name="com.rajawali.app.presentation.payment.PaymentFragment"
+            android:label="PaymentFragment">
+            <action
+                android:id="@+id/action_paymentFragment_to_paymentMethodBottomSheetDialog"
+                app:destination="@id/paymentMethodBottomSheetDialog" />
+            <action
+                android:id="@+id/action_paymentFragment_to_paymentWaitingFragment"
+                app:destination="@id/paymentWaitingFragment" />
+            <action
+                android:id="@+id/action_paymentFragment_to_flightDetailBottomSheetDialog"
+                app:destination="@id/flightDetailBottomSheetDialog" />
+        </fragment>
+        <fragment
+            android:id="@+id/baggageFragment"
+            android:name="com.rajawali.app.presentation.addsOn.baggage.BaggageFragment"
+            android:label="fragment_baggage"
+            tools:layout="@layout/fragment_baggage" />
+        <fragment
+            android:id="@+id/paymentCompleteFragment"
+            android:name="com.rajawali.app.presentation.paymentComplete.PaymentCompleteFragment"
+            android:label="PaymentCompleteFragment">
+            <action
+                android:id="@+id/action_paymentCompleteFragment_to_homePageFragment"
+                app:destination="@id/homePageFragment" />
+        </fragment>
+        <dialog
+            android:id="@+id/passengerBottomSheetDialog"
+            android:name="com.rajawali.app.presentation.bottomSheetDialog.passenger.PassengerBottomSheetDialog"
+            android:label="PassengerBottomSheetDialog" />
+        <fragment
+            android:id="@+id/detailsInformationFragment"
+            android:name="com.rajawali.app.presentation.detailsInformation.DetailsInformationFragment"
+            android:label="fragment_details_information"
+            tools:layout="@layout/fragment_details_information">
+            <action
+                android:id="@+id/action_detailsInformationFragment_to_passengerDetailsBottomSheetDialog"
+                app:destination="@id/passengerDetailsBottomSheetDialog" />
+            <action
+                android:id="@+id/action_detailsInformationFragment_to_travelAddOnsFragment"
+                app:destination="@id/travelAddOnsFragment" />
+        </fragment>
+        <fragment
+            android:id="@+id/mealsFragment"
+            android:name="com.rajawali.app.presentation.addsOn.meals.MealsFragment"
+            android:label="MealsFragment" />
+        <fragment
+            android:id="@+id/chooseTicketFragment"
+            android:name="com.rajawali.app.presentation.chooseTicket.ChooseTicketFragment"
+            android:label="fragment_choose_ticket"
+            tools:layout="@layout/fragment_choose_ticket">
+            <action
+                android:id="@+id/action_chooseTicketFragment_to_selectedTicketFragment"
+                app:destination="@id/selectedTicketFragment" />
+            <action
+                android:id="@+id/action_chooseTicketFragment_to_flightDetailBottomSheetDialog"
+                app:destination="@id/flightDetailBottomSheetDialog" />
+        </fragment>
+        <action
+            android:id="@+id/action_global_homePageFragment"
+            app:destination="@id/homePageFragment" />
+    </navigation>
+    <fragment
+        android:id="@+id/notificationFragment"
+        android:name="com.rajawali.app.presentation.notification.NotificationFragment"
+        android:label="fragment_notification"
+        tools:layout="@layout/fragment_notification">
+        <action
+            android:id="@+id/action_notificationFragment_to_notLoginSheetDialog"
+            app:destination="@id/notLoginSheetDialog" />
+    </fragment>
+    <dialog
+        android:id="@+id/notLoginSheetDialog"
+        android:name="com.rajawali.app.presentation.bottomSheetDialog.notLogin.NotLoginSheetDialog"
+        android:label="NotLoginSheetDialog" >
+        <action
+            android:id="@+id/action_notLoginSheetDialog_to_loginFragment"
+            app:destination="@id/loginFragment" />
+    </dialog>
+
+
 </navigation>
