--- a/core/src/main/res/layout/item_ticket.xml
+++ b/core/src/main/res/layout/item_ticket.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/cl_parent"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:layout_height="wrap_content">
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/item_ticket"
@@ -11,7 +12,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
-        android:layout_marginTop="12dp"
         android:layout_marginBottom="12dp"
         app:cardBackgroundColor="@color/white"
         app:cardElevation="2dp"
@@ -145,15 +145,15 @@
                         android:orientation="horizontal">
 
 
-                    <TextView
-                        android:id="@+id/price_ticket"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="4dp"
-                        android:fontFamily="@font/roboto_medium"
-                        tools:text="@string/tv_price_ticket"
-                        android:textColor="@color/main_color"
-                        android:textSize="16sp" />
+                        <TextView
+                            android:id="@+id/price_ticket"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="4dp"
+                            android:fontFamily="@font/roboto_medium"
+                            android:textColor="@color/main_color"
+                            android:textSize="16sp"
+                            tools:text="@string/tv_price_ticket" />
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -181,9 +181,9 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/roboto_medium"
-                            tools:text="@string/tv_point"
                             android:textColor="@color/neutral_700"
-                            android:textSize="10sp" />
+                            android:textSize="10sp"
+                            tools:text="@string/tv_point" />
                     </LinearLayout>
                 </LinearLayout>
 
@@ -195,21 +195,22 @@
                 android:layout_marginBottom="8dp">
 
                 <ImageView
-                    android:layout_marginEnd="8dp"
                     android:layout_width="32dp"
                     android:layout_height="24dp"
+                    android:layout_marginEnd="8dp"
                     android:src="@drawable/baggage" />
 
                 <ImageView
                     android:layout_width="32dp"
                     android:layout_height="24dp"
-                    android:src="@drawable/food"/>
+                    android:src="@drawable/food" />
             </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/ll_reschedule_options"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+
                 <ImageView
                     android:id="@+id/btn_reschedule"
                     android:layout_width="148dp"
@@ -225,11 +226,10 @@
                         android:id="@+id/btn_hide"
                         android:layout_width="16dp"
                         android:layout_height="16dp"
-                        android:src="@drawable/down_line"/>
+                        android:src="@drawable/down_line" />
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
-        
 
 
     </com.google.android.material.card.MaterialCardView>
