--- a/app/src/main/res/layout/toolbar_notification.xml
+++ b/app/src/main/res/layout/toolbar_notification.xml
@@ -33,16 +33,18 @@
 
             <TextView
                 android:id="@+id/tv_app_bar_label"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
                 android:fontFamily="@font/roboto_bold"
+                android:text="@string/tv_notification_label"
                 android:textColor="@color/white"
                 android:textSize="14sp"
                 app:layout_constraintBottom_toBottomOf="@+id/iv_back"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/iv_back"
-                app:layout_constraintTop_toTopOf="@+id/iv_back"
-                android:text="@string/tv_notification_label" />
+                app:layout_constraintTop_toTopOf="@+id/iv_back" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </com.google.android.material.appbar.MaterialToolbar>
